fixed up project card overflow increased nav z index to 2

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav {
     border-style:solid;
     border-width: 1px;
     border-bottom-color: #41525a;
-    z-index: 1;
+    z-index: 2;
 }
 nav ul {
     display: flex;
@@ -514,21 +514,14 @@ a svg:hover .skillset-icon-color {
     } */
 /* } */ 
 .business-container {
-    /* display: grid;
-    grid-template-columns:100%;
-    grid-template-rows: 50px 50px 1fr auto; */
-    /* grid-template-areas: */
-    /* "header" */
-    /* "nav" */
-    /* "main" */
-    /* "footer"; */
-    display: flex;
+    
+    /* display: flex;
     flex-flow: row wrap;
     position: relative;
-    /* width: 1200px; */
-    height: 300px;
-    /* margin: 240px auto; */
-    /* background: #000; */
+    height: 300px; */
+
+
+
 } 
 
 .business-container .box {
